add products list and product communication to order  model

--- a/views/order/_form.twig
+++ b/views/order/_form.twig
@@ -24,7 +24,10 @@
                                                     'dateFormat':'php:d.m.Y',
                                                 }).widget('yii\\widgets\\MaskedInput', {
                                                     'mask': '99.99.9999'
-                                                }).textInput() | raw}}
+                                                }).textInput({
+                                                    'placeholder': 'Введите дату',
+                                                    'value': app.formatter.asDate(model.date, 'php:d.m.Y')
+                                                }) | raw}}
         </div>
         <div class="col-md-4">
              {{ form.field(model, 'partner_id').dropDownList(model.partners, {
@@ -32,7 +35,9 @@
              }) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'product_id').textInput({'placeholder': 'Выберите товар'}) | raw }}
+            {{ form.field(model, 'product_id').dropDownList(model.products, {
+                 'prompt': 'Выберите товар'
+            }) | raw }}
         </div>
     </div>
 
