--- a/views/profile/_personal.twig
+++ b/views/profile/_personal.twig
@@ -9,9 +9,9 @@
 
     {% set form = active_form_begin() %}
 
-    <div class="d-flex">
+    <div class="d-flex flex-wrap">
 
-        <div class="u-info-block flex-fill">
+        <div class="u-info-block flex-fill order-2 order-md-1">
             <div class="row">
                 <div class="col-md-4">
                     {{ form.field(model, 'surname').textInput({'placeholder': 'Введите фамилию'}) | raw }}
@@ -41,13 +41,13 @@
                     {{ form.field(model, 'position').textInput({'placeholder': 'Введите должность'}) | raw }}
                 </div>
                 <div class="col-md-4" style="margin-top: 25px;">
-                    <input type="submit" value="Сохранить" class="btn btn-outline-success d-block w-100" />
+                    <input type="submit" value="Сохранить" class="btn btn-outline-success d-block" />
                 </div>
             </div>
         </div>
 
 
-        <div class="bg-white av-block ml-4">
+        <div class="bg-white av-block ml-4 order-1 order-md-2">
             <div class="av-preview">
                 <img src="{{ file_exists ? '/' ~ model.photo : 'https://via.placeholder.com/200' }}" id="img-preview" alt="">
                 <div class="edit-photo-block">
