--- a/views/profile/_user.twig
+++ b/views/profile/_user.twig
@@ -47,7 +47,7 @@
 
     <div class="form-group row">
         <div class="col-md-4" style="margin-top: 25px;">
-            <input type="submit" value="Сохранить" class="btn btn-outline-success d-block w-100" />
+            <input type="submit" value="Сохранить" class="btn btn-outline-success d-block" />
         </div>
     </div>
 
