--- a/views/profile/users.twig
+++ b/views/profile/users.twig
@@ -60,7 +60,10 @@
                     {
                         'class': 'yii\\grid\\ActionColumn',
                         'header': '',
-                        'template': '{view} {update} {delete}'
+                        'template': '{view} {update} {delete}',
+                        'buttons': {
+                            
+                        }
                     },
                 ]
             })
