--- a/views/product/view.twig
+++ b/views/product/view.twig
@@ -1,7 +1,7 @@
 {{ use('yii/widgets/DetailView') }}
 
 {{ set(this, 'title', 'Просмотр товара') }}
-{{ set(this, 'params', { 'breadcrumbs' : [{ 'label' : 'Заказы', 'url': '/product' }, {'label' : this.title }] }) }}
+{{ set(this, 'params', { 'breadcrumbs' : [{ 'label' : 'Товары', 'url': '/product' }, {'label' : this.title }] }) }}
 
 <div class="product-view">
 
