create order page

--- a/views/order/_search.twig
+++ b/views/order/_search.twig
@@ -9,7 +9,7 @@
 <div class="order-search">
 
     {% set form = active_form_begin({
-        'action': '/supplier',
+        'action': '/order',
         'method': 'get',
         'options': {
             'data-pjax': 1
