--- a/views/order/view.twig
+++ b/views/order/view.twig
@@ -8,10 +8,10 @@
     <div class="bg-white mb-4">
         <p>
             {{ html.a('Редактировать', path('update', {'id': model.id}), {
-                class: 'btn btn-outline-primary mr-2'
+                class: 'btn btn-outline-primary btn-sm mr-2'
             }) | raw }}
             {{ html.a('Удалить', path('delete', {'id': model.id}), {
-                class: 'btn btn-outline-danger',
+                class: 'btn btn-outline-danger btn-sm',
                 data: {
                     confirm: 'Вы уверены что хотите удалить данную запись?',
                     method: 'post'
