--- a/views/product/index.twig
+++ b/views/product/index.twig
@@ -18,7 +18,7 @@
         <div class="bg-white mb-4">
             <div class="row">
                 <div class="col-md-8"> 
-                    <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createProduct">Добавить товар</button>
+                    <button class="btn btn-outline-success btn-sm d-none d-md-block" data-toggle="modal" data-target="#createProduct">Добавить товар</button>
                 </div>
                 <div class="col-md-4"> 
                     {{ this.render('_search.twig', {model: searchModel}) | raw}}
@@ -27,7 +27,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <a href="/order/create" class="btn btn-outline-success d-md-none w-100" >Добавить товар</a>
+                    <a href="/order/create" class="btn btn-outline-success btn-sm d-md-none w-100" >Добавить товар</a>
                 </div>
             </div>
         </div>
