--- a/views/profile/users.twig
+++ b/views/profile/users.twig
@@ -14,10 +14,10 @@
 
      {{ pjax_begin() }}
 
-    <div class="bg-white mg-bottom">
+    <div class="bg-white mb-4">
         <div class="row">
             <div class="col-md-8"> 
-                <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createUser">Создать пользователя</button>
+                <button class="btn btn-outline-success btn-sm d-none d-md-block" data-toggle="modal" data-target="#createUser">Создать пользователя</button>
             </div>
             <div class="col-md-4"> 
                 {{ this.render('_search.twig', {model: searchModel}) | raw}}
@@ -26,7 +26,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="/profile/create" class="btn btn-outline-success d-md-none w-100" >Создать пользователя</a>
+                <a href="/profile/create" class="btn btn-outline-success btn-sm d-md-none w-100" >Создать пользователя</a>
             </div>
         </div>
     </div>
