--- a/views/order/index.twig
+++ b/views/order/index.twig
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-8"> 
                     {% if model.products and model.partners %}
-                        <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createOrder">Добавить заказ</button>
+                        <button class="btn btn-outline-success btn-sm d-none d-md-block" data-toggle="modal" data-target="#createOrder">Добавить заказ</button>
                     {% else %}
                         <div class="alert alert-primary" role="alert">
                             Для добавления заказа необходимо создать {{ model.partners ? 'товары' : model.products ? 'партнёров' : 'товары и партнёров' }}
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-md-12">
                 {% if model.products and model.partners %}
-                    <a href="/order/create" class="btn btn-outline-success d-md-none w-100" >Добавить заказ</a>
+                    <a href="/order/create" class="btn btn-outline-success btn-sm d-md-none w-100" >Добавить заказ</a>
                 {% endif %}
                 </div>
             </div>
