--- a/views/partner/_form.twig
+++ b/views/partner/_form.twig
@@ -13,54 +13,54 @@
 
     <div class="row">
         <div class="col-md-4">
-            {{ form.field(model, 'name').textInput({'placeholder': 'Введите название'}) | raw }}
+            {{ form.field(model, 'name').textInput({'placeholder': 'Введите название', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-             {{ form.field(model, 'phone').widget('yii\\widgets\\MaskedInput', {'mask': '+9 (999) 999-99-99'}).textInput({'placeholder': 'Введите телефон'}) | raw }}
+             {{ form.field(model, 'phone').widget('yii\\widgets\\MaskedInput', {'mask': '+9 (999) 999-99-99'}).textInput({'placeholder': 'Введите телефон', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'email').textInput({'placeholder': 'Введите email'}) | raw }}
+            {{ form.field(model, 'email').textInput({'placeholder': 'Введите email', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-4">
-            {{ form.field(model, 'site').textInput({'placeholder': 'Введите сайт'}) | raw }}
+            {{ form.field(model, 'site').textInput({'placeholder': 'Введите сайт', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'contact_name').textInput({'placeholder': 'Введите Ф.И.О. контакта'}) | raw }}
+            {{ form.field(model, 'contact_name').textInput({'placeholder': 'Введите Ф.И.О. контакта', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'director_name').textInput({'placeholder': 'Введите Ф.И.О. директора'}) | raw }}
+            {{ form.field(model, 'director_name').textInput({'placeholder': 'Введите Ф.И.О. директора', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
     </div>
     
     <div class="row">
         <div class="col-md-4">
-            {{ form.field(model, 'inn').textInput({'placeholder': 'Введите ИНН'}) | raw }}
+            {{ form.field(model, 'inn').textInput({'placeholder': 'Введите ИНН', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'kpp').textInput({'placeholder': 'Введите КПП'}) | raw }}
+            {{ form.field(model, 'kpp').textInput({'placeholder': 'Введите КПП', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'account_number').textInput({'placeholder': 'Введите номер р/счёта'}) | raw }}
+            {{ form.field(model, 'account_number').textInput({'placeholder': 'Введите номер р/счёта', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-4">
-            {{ form.field(model, 'address').textInput({'placeholder': 'Введите адрес'}) | raw }}
+            {{ form.field(model, 'address').textInput({'placeholder': 'Введите адрес', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'legal_address').textInput({'placeholder': 'Введите юридический адрес'}) | raw }}
+            {{ form.field(model, 'legal_address').textInput({'placeholder': 'Введите юридический адрес', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'comment').textarea({'placeholder': 'Комментарий', 'rows':'1'}) | raw }}
+            {{ form.field(model, 'comment').textarea({'placeholder': 'Комментарий', 'rows':'1', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
     </div>
 
      <div class="form-group">
-        <input type="submit" value="Сохранить" class="btn btn-outline-success d-block " />
+        <input type="submit" value="Сохранить" class="btn btn-outline-success btn-sm d-block " />
     </div>
 
     {{ active_form_end() }} 
