--- a/views/partner/index.twig
+++ b/views/partner/index.twig
@@ -17,7 +17,7 @@
         <div class="bg-white mb-4">
             <div class="row">
                 <div class="col-md-8"> 
-                    <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createPartner">Добавить партнёра</button>
+                    <button class="btn btn-outline-success btn-sm d-none d-md-block" data-toggle="modal" data-target="#createPartner">Добавить партнёра</button>
                 </div>
                 <div class="col-md-4"> 
                     {{ this.render('_search.twig', {model: searchModel}) | raw}}
@@ -26,7 +26,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <a href="/partner/create" class="btn btn-outline-success d-md-none w-100" >Создать пользователя</a>
+                    <a href="/partner/create" class="btn btn-outline-success btn-sm d-md-none w-100" >Создать пользователя</a>
                 </div>
             </div>
         </div>
