--- a/views/product/_form.twig
+++ b/views/product/_form.twig
@@ -12,13 +12,13 @@
 
     <div class="row">
         <div class="col-md-4">
-            {{ form.field(model, 'name').textInput({'placeholder': 'Введите название товара'}) | raw }}
+            {{ form.field(model, 'name').textInput({'placeholder': 'Введите название товара', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'price').textInput({'placeholder': 'Цена за единицу (рублей)'}) | raw }}
+            {{ form.field(model, 'price').textInput({'placeholder': 'Цена за единицу (рублей)', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'count').textInput({'placeholder': 'Количество'}) | raw }}
+            {{ form.field(model, 'count').textInput({'placeholder': 'Количество', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
     </div>
 
@@ -30,16 +30,17 @@
                 'л.',
                 'у.е.'
             ], {
-                 'prompt': 'Выберите единицу измерения'
+                'prompt': 'Выберите единицу измерения', 
+                'class': 'form-control form-control-sm'
              }) | raw }}
         </div>
         <div class="col-md-8">
-             {{ form.field(model, 'description').textarea({'placeholder': 'Описание', 'rows':'1'}) | raw }}
+             {{ form.field(model, 'description').textarea({'placeholder': 'Описание', 'rows':'1', 'class': 'form-control form-control-sm'}) | raw }}
         </div>
     </div>
 
      <div class="form-group">
-        <input type="submit" value="Сохранить" class="btn btn-outline-success d-block " />
+        <input type="submit" value="Сохранить" class="btn btn-outline-success btn-sm d-block " />
     </div>
 
     {{ active_form_end() }} 
