--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-md-8"> 
                     {% if model.products and model.partners %}
-                        <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createSupplier">Добавить поставщика</button>
+                        <button class="btn btn-outline-success btn-sm d-none d-md-block" data-toggle="modal" data-target="#createSupplier">Добавить поставщика</button>
                     {% else %}
                         <div class="alert alert-primary" role="alert">
                             Для добавления поставщика необходимо создать {{ model.partners ? 'товары' : model.products ? 'партнёров' : 'товары и партнёров' }}
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-md-12">
                     {% if model.products and model.partners %}
-                        <a href="/supplier/create" class="btn btn-outline-success d-md-none w-100" >Добавить поставщика</a>
+                        <a href="/supplier/create" class="btn btn-sm btn-outline-success d-md-none w-100" >Добавить поставщика</a>
                     {% endif %}
                 </div>
             </div>
