--- a/views/profile/_personal.twig
+++ b/views/profile/_personal.twig
@@ -1,5 +1,5 @@
-{{ use('yii/bootstrap4/ActiveForm') }}
-{{ use('yii/widgets/MaskedInput') }}
+{# {{ use('yii/bootstrap4/ActiveForm') }} #}
+{# {{ use('yii/widgets/MaskedInput') }} #}
 
 
 <div class="personal-form bg-white mb-4">
@@ -14,34 +14,34 @@
         <div class="u-info-block flex-fill order-2 order-md-1">
             <div class="row">
                 <div class="col-md-4">
-                    {{ form.field(model, 'surname').textInput({'placeholder': 'Введите фамилию'}) | raw }}
+                    {{ form.field(model, 'surname').textInput({'placeholder': 'Введите фамилию', 'class': 'form-control form-control-sm'}) | raw }}
                 </div>
                 <div class="col-md-4">
-                    {{ form.field(model, 'name').textInput({'placeholder': 'Введите имя'}) | raw }}
+                    {{ form.field(model, 'name').textInput({'placeholder': 'Введите имя', 'class': 'form-control form-control-sm'}) | raw }}
                 </div>
                 <div class="col-md-4">
-                    {{ form.field(model, 'secondname').textInput({'placeholder': 'Введите отчество'}) | raw }}
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4">
-                    {{ form.field(model, 'date_of_birthday').widget('yii\\widgets\\MaskedInput', {'mask': '99.99.9999'}).textInput({'placeholder': 'Введите дату рождения'}) | raw }}
-                </div>
-                <div class="col-md-4">
-                    {{ form.field(model, 'phone').widget('yii\\widgets\\MaskedInput', {'mask': '+9 (999) 999-99-99'}).textInput({'placeholder': 'Введите телефон'}) | raw }}
-                </div>
-                <div class="col-md-4">
-                    {{ form.field(model, 'address').textInput({'placeholder': 'Введите адрес'}) | raw }}
+                    {{ form.field(model, 'secondname').textInput({'placeholder': 'Введите отчество', 'class': 'form-control form-control-sm'}) | raw }}
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
-                    {{ form.field(model, 'position').textInput({'placeholder': 'Введите должность'}) | raw }}
+                    {{ form.field(model, 'date_of_birthday').widget('yii\\widgets\\MaskedInput', {'mask': '99.99.9999'}).textInput({'placeholder': 'Введите дату рождения', 'class': 'form-control form-control-sm'}) | raw }}
+                </div>
+                <div class="col-md-4">
+                    {{ form.field(model, 'phone').widget('yii\\widgets\\MaskedInput', {'mask': '+9 (999) 999-99-99'}).textInput({'placeholder': 'Введите телефон', 'class': 'form-control form-control-sm'}) | raw }}
+                </div>
+                <div class="col-md-4">
+                    {{ form.field(model, 'address').textInput({'placeholder': 'Введите адрес', 'class': 'form-control form-control-sm'}) | raw }}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    {{ form.field(model, 'position').textInput({'placeholder': 'Введите должность', 'class': 'form-control form-control-sm'}) | raw }}
                 </div>
                 <div class="col-md-4" style="margin-top: 25px;">
-                    <input type="submit" value="Сохранить" class="btn btn-outline-success d-block" />
+                    <input type="submit" value="Сохранить" class="btn btn-outline-success btn-sm d-block" />
                 </div>
             </div>
         </div>
@@ -53,8 +53,8 @@
                 <div class="edit-photo-block">
                     <div class="rs-pencil">
                     <span class="glyphicon glyphicon-pencil" onclick="$('#add-photo-input').click()"></span>
+                    <span class="glyphicon glyphicon-trash" onclick=""></span>
                     </div>
-                    {# <?= $form->field($model, 'img')->fileInput(['class'=>'add-photo-input', 'id'=>"add-photo-input"])->label(false) ?> #}
                      {{ form.field(model, 'img').fileInput({'class':'add-photo-input', 'id':'add-photo-input','placeholder': 'Введите должность'}).label(false) | raw }}
                 </div>
             </div>
