--- a/views/order/index.twig
+++ b/views/order/index.twig
@@ -63,8 +63,9 @@
                         'sum',
                         'payment',
                         {
-                            'attribute': 'htmlStatus',
-                            'format': 'raw'
+                            'attribute': 'status',
+                            'format': 'raw',
+                            'value': 'htmlStatus'
                         },
                         {
                             'class': 'yii\\grid\\ActionColumn',
