--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -11,4 +11,5 @@
 @import './blocks/navigation.scss';
 @import './blocks/site-index.scss';
 @import './blocks/switch.scss';
+@import './blocks/pagination.scss';
 
