add nettings to report

--- a/views/product/index.twig
+++ b/views/product/index.twig
@@ -45,7 +45,7 @@
                     'columns': [
                         {'class': 'yii\\grid\\SerialColumn'},
                         'name',
-                        {'attribute': 'price', 'format': ['currency', 'RUB'] },
+                        {'attribute': 'price', 'format': ['currency'] },
                         'count',
                         'total',
                         'truncateDescription',
