--- a/views/report/index.twig
+++ b/views/report/index.twig
@@ -17,11 +17,56 @@
 
         </div>
 
+        {% if nettings %}
+        <div class="bg-white mb-4">
+            <table class="table table-sm table-hover table-bordered" >
+                <caption>{{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по взаимозачётам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
+                <thead>
+                    <tr>
+                        <th>Партнёр</th>
+                        <th>Продукт</th>
+                        <th>Количество продано</th>
+                        <th>Цена продажи</th>
+                        <th>Количество куплено</th>
+                        <th>Цена покупки</th>
+                        <th>Остаток по счёту</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for partnName, netting in nettings %}
+                        <tr>
+                            <td rowspan="{{ netting|length }}">{{ partnName }}</td>
+                            {% for prodName, product in netting %}
+
+                                {% if loop.index > 1 %}
+                                    <tr>
+                                {% endif %}
+
+                                <td>{{ prodName }}</td>
+                                <td>{{ app.formatter.format(product.countSale, 'integer') | raw }}</td>
+                                <td>{{ app.formatter.asCurrency(product.priceSale) | raw }}</td>
+                                <td>{{ app.formatter.format(product.countBuy, 'integer') | raw }}</td>
+                                <td>{{ app.formatter.asCurrency(product.priceBuy) | raw }}</td>
+                                <td>
+                                    {% if product.result > 0 %}
+                                        <span style="color: green">{{ app.formatter.asCurrency(product.result) | raw }}</span>
+                                    {% else %}
+                                        <span style="color: red">{{ app.formatter.asCurrency(product.result) | raw }} </span>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            {% endfor %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+
         <div class="bg-white mb-4">
 
             {% if products %}
                 <table class="table table-sm table-striped table-bordered" >
-                    <caption>{{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по материалам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
+                    <caption>{{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по материалам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
                     <thead>
                         <tr>
                             <th>Продукт</th>
@@ -37,10 +82,10 @@
 
                         <tr>
                             <td>{{ key }}</td>
-                            <td>{{ product.countSale }}</td>
-                            <td>{{ product.priceSale }}</td>
-                            <td>{{ product.countBuy }}</td>
-                            <td>{{ product.priceBuy }}</td>
+                            <td>{{ app.formatter.format(product.countSale, 'integer') | raw }}</td>
+                            <td>{{ app.formatter.asCurrency(product.priceSale) | raw }}</td>
+                            <td>{{ app.formatter.format(product.countBuy, 'integer') | raw }}</td>
+                            <td>{{ app.formatter.asCurrency(product.priceBuy) | raw }}</td>
                         </tr>
 
                     {% endfor %}
@@ -49,7 +94,7 @@
                 </table>
             {% else %}
                 <div class="alert alert-primary" role="alert">
-                    {{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по материалам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}" не найден
+                    {{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по материалам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}" не найден
                 </div>
             {% endif %}
         </div>
@@ -58,11 +103,12 @@
             {% if orders %}
                 <table class="table table-sm table-striped table-bordered" >
                     <thead>
-                        <caption>{{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по заказам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
+                        <caption>{{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по заказам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
                         <tr>
                         <th>Дата</th>
                         <th>Партнёр</th>
                         <th>Товар</th>
+                        <th>Тип оплаты</th>
                         <th>Количество</th>
                         <th>Сумма</th>
                         </tr>
@@ -74,8 +120,9 @@
                                 <td>{{ order.date | date('d.m.Y') }}</td>
                                 <td>{{ order.partner.name }}</td>
                                 <td>{{ order.product.name }}</td>
-                                <td>{{ order.count }}</td>
-                                <td>{{ order.sum }}</td>
+                                <td>{{ order.payment }}</td>
+                                <td>{{ app.formatter.format(order.count, 'integer') | raw }}</td>
+                                <td>{{ app.formatter.asCurrency(order.sum) | raw }}</td>
                             </tr> 
                         {% endfor %}
                                 
@@ -83,7 +130,7 @@
                 </table>
             {% else %}
                 <div class="alert alert-primary" role="alert">
-                    {{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по заказам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}" не найден
+                    {{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по заказам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}" не найден
                 </div>
             {% endif %}
         </div>
@@ -92,11 +139,12 @@
             {% if suppliers %}
                 <table class="table table-sm table-striped table-bordered" >
                     <thead>
-                        <caption>{{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по поставщикам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
+                        <caption>{{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по поставщикам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
                         <tr>
                         <th>Дата</th>
                         <th>Партнёр</th>
                         <th>Товар</th>
+                        <th>Тип оплаты</th>
                         <th>Количество</th>
                         <th>Сумма</th>
                         </tr>
@@ -108,8 +156,9 @@
                                 <td>{{ supplier.date | date('d.m.Y') }}</td>
                                 <td>{{ supplier.partner.name }}</td>
                                 <td>{{ supplier.product.name }}</td>
-                                <td>{{ supplier.count }}</td>
-                                <td>{{ supplier.sum }}</td>
+                                <td>{{ supplier.payment }}</td>
+                                <td>{{ app.formatter.format(supplier.count, 'integer') | raw }}</td>
+                                <td>{{ app.formatter.asCurrency(supplier.sum) | raw }}</td>
                             </tr> 
                         {% endfor %}
 
@@ -117,7 +166,7 @@
                 </table>
             {% else %}
                 <div class="alert alert-primary" role="alert">
-                    {{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по поставщикам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}" не найден
+                    {{app.request.get('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по поставщикам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}" не найден
                 </div>
             {% endif %}
         </div>
