--- a/views/order/view.twig
+++ b/views/order/view.twig
@@ -31,12 +31,12 @@
                     'id',
                     'date',
                     {'attribute': 'date', 'format': ['date', 'php:d.m.Y H:i:s']},
-                    'partner_id',
-                    'product_id',
+                    'partner.name',
+                    'product.name',
                     'bill',
-                    'count',
-                    'price',
-                    'sum',
+                    {'attribute': 'count', 'format': ['integer']},
+                    {'attribute': 'price', 'format': ['currency']},
+                    {'attribute': 'sum', 'format': ['currency']},
                     'payment',
                     'status',
                     'comment:ntext',
