--- a/views/partner/index.twig
+++ b/views/partner/index.twig
@@ -42,7 +42,7 @@
                         'class': 'col-md-4 mb-4' 
                     },
                     'itemView': '_list.twig',
-                    'layout': '{summary}<div class="row"> {items} </div>'
+                    'layout': '{summary}<div class="row"> {items} </div> {pager}'
                 })
             }}
 
