--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -56,9 +56,9 @@
                         'partner.name',
                         'product.name',
                         'bill',
-                        'count',
-                        'price',
-                        'sum',
+                        {'attribute': 'count', 'format': ['integer']},
+                        {'attribute': 'price', 'format': ['currency']},
+                        {'attribute': 'sum', 'format': ['currency']},
                         'payment',
                         {
                             'class': 'yii\\grid\\ActionColumn',
