--- a/views/supplier/view.twig
+++ b/views/supplier/view.twig
@@ -29,14 +29,13 @@
                 },
                 'attributes': [
                     'id',
-                    'date',
-                    {'attribute': 'date', 'format': ['date', 'php:d.m.Y H:i:s']},
-                    'partner_id',
-                    'product_id',
+                    {'attribute': 'date', 'format': ['date', 'php:d.m.Y']},
+                    'partner.name',
+                    'product.name',
                     'bill',
-                    'count',
-                    'price',
-                    'sum',
+                    {'attribute': 'count', 'format': ['integer']},
+                    {'attribute': 'price', 'format': ['currency']},
+                    {'attribute': 'sum', 'format': ['currency']},
                     'payment',
                     'comment:ntext',
                     'created_by',
